2010-04-09  Jaime Yap  <jaimeyap@google.com>

Reviewed by Pavel Feldman.

        Web Inspector: Fixes "wrong parent" for GCEvents that come at the end of a
        timeline record node.
        https://bugs.webkit.org/show_bug.cgi?id=37340

        * inspector/InspectorTimelineAgent.cpp:
        (WebCore::InspectorTimelineAgent::didInstallTimer):
        (WebCore::InspectorTimelineAgent::didRemoveTimer):
        (WebCore::InspectorTimelineAgent::didMarkTimeline):
        (WebCore::InspectorTimelineAgent::didMarkDOMContentEvent):
        (WebCore::InspectorTimelineAgent::didMarkLoadEvent):
        (WebCore::InspectorTimelineAgent::addRecordToTimeline):
        (WebCore::InspectorTimelineAgent::didCompleteCurrentRecord):

git-svn-id: svn://svn.chromium.org/blink/trunk@57387 bbb929c8-8fbe-4397-9dbb-9b2b20218538