third_party/WebKit/WebCore/inspector/InspectorTimelineAgent.cpp
@@ -145,6 +145,7 @@ void InspectorTimelineAgent::didWriteHTML(unsigned int endLine)
 
 void InspectorTimelineAgent::didInstallTimer(int timerId, int timeout, bool singleShot)
 {
+    pushGCEventRecords();
     ScriptObject record = TimelineRecordFactory::createGenericRecord(m_frontend, WTF::currentTimeMS());
     record.set("data", TimelineRecordFactory::createTimerInstallData(m_frontend, timerId, timeout, singleShot));
     addRecordToTimeline(record, TimerInstallTimelineRecordType);
@@ -152,6 +153,7 @@ void InspectorTimelineAgent::didInstallTimer(int timerId, int timeout, bool sing
 
 void InspectorTimelineAgent::didRemoveTimer(int timerId)
 {
+    pushGCEventRecords();
     ScriptObject record = TimelineRecordFactory::createGenericRecord(m_frontend, WTF::currentTimeMS());
     record.set("data", TimelineRecordFactory::createGenericTimerData(m_frontend, timerId));
     addRecordToTimeline(record, TimerRemoveTimelineRecordType);
@@ -240,6 +242,7 @@ void InspectorTimelineAgent::didFinishLoadingResource(unsigned long identifier, 
 
 void InspectorTimelineAgent::didMarkTimeline(const String& message)
 {
+    pushGCEventRecords();
     ScriptObject record = TimelineRecordFactory::createGenericRecord(m_frontend, WTF::currentTimeMS());
     record.set("data", TimelineRecordFactory::createMarkTimelineData(m_frontend, message));
     addRecordToTimeline(record, MarkTimelineRecordType);
@@ -247,12 +250,14 @@ void InspectorTimelineAgent::didMarkTimeline(const String& message)
 
 void InspectorTimelineAgent::didMarkDOMContentEvent()
 {
+    pushGCEventRecords();
     ScriptObject record = TimelineRecordFactory::createGenericRecord(m_frontend, WTF::currentTimeMS());
     addRecordToTimeline(record, MarkDOMContentEventType);
 }
 
 void InspectorTimelineAgent::didMarkLoadEvent()
 {
+    pushGCEventRecords();
     ScriptObject record = TimelineRecordFactory::createGenericRecord(m_frontend, WTF::currentTimeMS());
     addRecordToTimeline(record, MarkLoadEventType);
 }
@@ -270,9 +275,7 @@ void InspectorTimelineAgent::resetFrontendProxyObject(InspectorFrontend* fronten
 }
 
 void InspectorTimelineAgent::addRecordToTimeline(ScriptObject record, TimelineRecordType type)
-{  
-    if (type != GCEventTimelineRecordType)
-        pushGCEventRecords();
+{
     record.set("type", type);
     setHeapSizeStatistic(record);
     if (m_recordStack.isEmpty())
@@ -297,6 +300,7 @@ void InspectorTimelineAgent::didCompleteCurrentRecord(TimelineRecordType type)
     // An empty stack could merely mean that the timeline agent was turned on in the middle of
     // an event.  Don't treat as an error.
     if (!m_recordStack.isEmpty()) {
+        pushGCEventRecords();
         TimelineRecordEntry entry = m_recordStack.last();
         m_recordStack.removeLast();
         ASSERT(entry.type == type);
